Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29860

Regression: UI drawn like disabled when window is not active

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.1.0
    • 5.0.0, 5.0.1
    • GUI: Look'n'Feel
    • Mac OS X 10.8
    • 4520cb98659960e343a3bcbcf4477858971290dc

    Description

      When switching away from a Qt5 window (making a different window/app active), all "stock" controls, labels and other widgets are drawn with a grayish, disabled look.
      This

      a) is a huge behavior change to Qt4, e.g. breaking the style in combination with custom widgets
      b) breaks with the style of all native applications that I looked at, i.e. no other application that I found did that

      See the attached screenshots

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              dedietri Gabriel de Dietrich (drgvond)
              con Eike Ziller
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes